@@ -37,11 +37,33 @@ open class IOCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
     }
 }
 
-open class IOCliAndroidTask : org.jetbrains.intellij.tasks.RunIdeTask() {
-    // Name of the runner
+open class PreprocessKotlinJavaCliTask : org.jetbrains.intellij.tasks.RunIdeTask() {
+    // Input directory with files
     @get:Input
-    val runner: String? by project
+    val input: String? by project
 
+    // Output directory to store indexes and methods data
+    @get:Input
+    val output: String? by project
+
+    // Absolute path to Android SDK
+    @get:Input
+    val androidSdk: String? by project
+
+    init {
+        jvmArgs = listOf(
+            "-Djava.awt.headless=true",
+            "--add-exports",
+            "java.base/jdk.internal.vm=ALL-UNNAMED",
+            "-Djdk.module.illegalAccess.silent=true"
+        )
+        maxHeapSize = "20g"
+        standardInput = System.`in`
+        standardOutput = System.`out`
+    }
+}
+
+open class TestOpenKotlinJavaTask : org.jetbrains.intellij.tasks.RunIdeTask() {
     // Input directory with files
     @get:Input
     val input: String? by project
@@ -75,10 +97,20 @@ tasks {
         )
     }
 
-    register<IOCliAndroidTask>("androidCli") {
+    register<PreprocessKotlinJavaCliTask>("preprocessKotlinJava") {
         dependsOn("buildPlugin")
         args = listOfNotNull(
-            runner,
+            "preprocessKotlinJava",
+            input?.let { "--input=$it" },
+            output?.let { "--output=$it" },
+            androidSdk?.let { "--androidSdk=$it" }
+        )
+    }
+
+    register<TestOpenKotlinJavaTask>("testOpenKotlinJava") {
+        dependsOn("buildPlugin")
+        args = listOfNotNull(
+            "testOpenKotlinJava",
             input?.let { "--input=$it" },
             preprocessOutput?.let { "--preprocessOutput=$it" },
             androidSdk?.let { "--androidSdk=$it" }
